--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "firebase": "^8.10.0",
+    "firebase-admin": "^10.0.0",
     "nodemon": "^2.0.15"
   }
 }
